# SpotifyStream

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  CTestTestfile.cmake  Doxyfile.docs  Makefile  cmake_install.cmake
include/: AudioStream.h  SpotifyAPI.h  getURL.h  initCurl.h  streamAPI.h  streamURL.h
src/: AudioStream.cpp  CMakeLists.txt  SpotifyAPI.cpp  getURL.cpp  initCurl.cpp  streamAPI.cpp  streamURL.cpp
